added container and title

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -17,3 +17,18 @@ a {
 hr {
   margin: 15px auto;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  height: 100vh;
+}
+
+.title {
+  text-align: center;
+  margin: 15px 0;
+  font-weight: normal;
+}
